--- a/src/app/Sign/login/login.component.html
+++ b/src/app/Sign/login/login.component.html
@@ -34,12 +34,11 @@
     <!-- Link to registration -->
     <div class="text-center mt-3">
       <small>Don't have an account?
-        <a routerLink="/reg" class="text-decoration-none">Register here</a>
+        <a routerLink="/registration" class="text-decoration-none">Register here</a>
       </small>
     </div>
   </div>
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
