--- a/src/app/User Layout/layout/header/header.component.html
+++ b/src/app/User Layout/layout/header/header.component.html
@@ -1,1 +1,73 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg custom-navbar">
+  <div class="container">
+    <a class="navbar-brand fw-bold" routerLink="/">
+      <span class="brand-text">FoodHub</span>
+      <span class="brand-dot">.</span>
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <!-- Common Links (Always Visible) -->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/restaurants" routerLinkActive="active">Restaurants</a>
+        </li>
+
+        <!-- Logged In State -->
+        <ng-container *ngIf="user$ | async as user; else guestLinks">
+
+          <!-- Profile Link (Visible on large screens) -->
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" routerLink="/profile" title="Profile">
+              <i class="bi bi-person-circle"></i>
+            </a>
+          </li>
+
+          <!-- Logout Button (Visible on large screens) -->
+          <li class="nav-item d-none d-lg-block">
+            <button class="btn btn-outline-danger btn-sm ms-2" (click)="logout()">Logout</button>
+          </li>
+
+          <!-- Mobile Dropdown (Visible only on small screens) -->
+          <li class="nav-item dropdown d-lg-none">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="bi bi-person-circle"></i>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+              <li>
+                <a class="dropdown-item" routerLink="/profile">
+                  <i class="bi bi-person me-2"></i>Profile
+                </a>
+              </li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li>
+                <a class="dropdown-item text-danger" (click)="logout()">
+                  <i class="bi bi-box-arrow-right me-2"></i>Logout
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ng-container>
+
+        <!-- Guest State -->
+        <ng-template #guestLinks>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn-register" routerLink="/reg">Register</a>
+          </li>
+        </ng-template>
+      </ul>
+    </div>
+  </div>
+</nav>
