Display Restaurants in Web Page

--- a/src/app/User Layout/layout/header/header.component.html
+++ b/src/app/User Layout/layout/header/header.component.html
@@ -64,7 +64,7 @@
             <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn-register" routerLink="/reg">Register</a>
+            <a class="nav-link btn-register" routerLink="/registration">Register</a>
           </li>
         </ng-template>
       </ul>
