Display Items in Web Page

--- a/src/app/User Layout/list-restaurants/list-restaurants.component.html
+++ b/src/app/User Layout/list-restaurants/list-restaurants.component.html
@@ -10,7 +10,7 @@
             alt="{{ restaurant.name }}" style="height: 200px; object-fit: contain;">
           <div class="add-to-cart-overlay">
             <button class="btn btn-primary" [routerLink]="['/restaurants/', restaurant._id]">
-              More Details
+              See Menu
             </button>
           </div>
         </div>
