--- a/src/app/Dashboard/restaurants/restaurants.component.html
+++ b/src/app/Dashboard/restaurants/restaurants.component.html
@@ -1,1 +1,40 @@
-<p>restaurants works!</p>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h4>Restaurants</h4>
+
+    <button class="btn btn-primary" (click)="addRestaurant()">
+        Add New Restaurant
+    </button>
+</div>
+
+<div class="table-responsive">
+    <table class="table table-bordered align-middle">
+        <thead class="table-light">
+            <tr>
+                <th>Image</th>
+                <th>Name</th>
+                <th class="text-center">Actions</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr *ngFor="let restaurant of restaurants">
+                <td width="100">
+                    <img [src]="'http://localhost:3000/uploads/' + restaurant.img" class="img-fluid rounded"
+                        alt="restaurant" />
+                </td>
+
+                <td>{{ restaurant.name }}</td>
+
+                <td class="text-center">
+                    <button class="btn btn-sm btn-warning me-2" (click)="editRestaurant(restaurant._id)">
+                        Edit
+                    </button>
+
+                    <button class="btn btn-sm btn-danger" (click)="deleteRestaurant(restaurant._id)">
+                        Delete
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
