Complete Display Items in dashboard and activate form of add and edit

--- a/src/app/Dashboard/items/items.component.html
+++ b/src/app/Dashboard/items/items.component.html
@@ -1,1 +1,63 @@
-<p>items works!</p>
+<h4 class="mb-4">Items Management</h4>
+
+<div *ngIf="loading">Loading...</div>
+
+<div class="row g-3">
+
+  <div class="col-lg-3 col-md-6 col-12"
+       *ngFor="let restaurant of restaurants">
+
+    <div class="card shadow-sm h-100">
+
+      <img [src]="'http://localhost:3000/uploads/' + restaurant.img" class="card-img-top" height="200">
+
+      <div class="card-body">
+
+        <div class="d-flex justify-content-between align-items-center mb-2">
+          <h6 class="mb-0">{{ restaurant.name }}</h6>
+
+          <button class="btn btn-sm btn-primary"
+                  (click)="addItem(restaurant._id)">
+            + Item
+          </button>
+        </div>
+
+        <!-- ITEMS -->
+        <div *ngIf="itemsMap[restaurant._id]?.length; else emptyState">
+
+          <div class="d-flex align-items-center justify-content-between
+                      border-bottom py-2"
+               *ngFor="let item of itemsMap[restaurant._id]">
+
+            <div class="d-flex align-items-center gap-2">
+              <img [src]="'http://localhost:3000/uploads/' + item.img"
+                   width="35" height="35"
+                   class="rounded">
+
+              <div>
+                <div class="fw-semibold">{{ item.name }}</div>
+                <small class="text-muted">{{ item.price }} EGP</small>
+              </div>
+            </div>
+
+            <div class="d-flex gap-1">
+              <button class="btn btn-sm btn-warning"
+                      (click)="editItem(item._id)">✏️</button>
+              <button class="btn btn-sm btn-danger"
+                      (click)="deleteItem(item._id, restaurant._id)">🗑</button>
+            </div>
+          </div>
+
+        </div>
+
+        <ng-template #emptyState>
+          <div class="text-muted small mt-2">
+            No items yet
+          </div>
+        </ng-template>
+
+      </div>
+    </div>
+  </div>
+
+</div>
