--- a/src/app/User Layout/layout/header/header.component.css
+++ b/src/app/User Layout/layout/header/header.component.css
@@ -2,6 +2,10 @@
   background-color: #fff;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.08);
   padding: 0.8rem 0;
+  position: fixed;
+  z-index: 10000;
+  width: 100%;
+  /* margin-bottom: 150px;   */
 
   .navbar-brand {
     font-size: 1.5rem;
